--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,4 +28,11 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v -coverprofile=profile.cov ./...
+
+    - name: Coveralls
+      env:
+        COVERALLS_TOKEN: ${ secrets.GITHUB_TOKEN }}
+      run: |
+        GO111MODULE=off go get github.com/mattn/goveralls
+        $(go env GOPATH)/bin/goveralls -coverprofile=profile.cov -service=github
